# 14_Document_Level_Translation

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  evaluation.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md
models/: README.md
notebooks/: COLAB_GUIDE.md  DocTrans_Colab_Training_H100_AUTOPILOT.ipynb  _build_notebook.py
sample_data/: README.md  sample.md  sample_translate_request.json
scripts/: run_demo.sh  serve.sh
src/doctrans/: __init__.py  cli.py  config.py  logging_utils.py
src/doctrans/agent/: __init__.py  doctrans_agent.py  llm_orchestrator.py  policy.py  state.py  tools.py
src/doctrans/analysis/: __init__.py  error_analysis.py  latency.py
src/doctrans/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/doctrans/automation/: __init__.py  autopilot.py
src/doctrans/autoreport/: __init__.py  artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/doctrans/data/: __init__.py  dataset.py  download_dataset.py  samples.py
src/doctrans/docparse/: __init__.py  html_doc.py  json_doc.py  markdown_doc.py  mask.py  plain_doc.py  router.py  segment.py  structure_score.py
src/doctrans/grading/: __init__.py  checklist.py
src/doctrans/models/: __init__.py
src/doctrans/monitoring/: __init__.py  drift_report.py
src/doctrans/mt/: __init__.py  context.py  translator.py
src/doctrans/training/: __init__.py  evaluate.py  metrics.py  train_baseline.py  train_mt.py  tune.py
tests/: conftest.py  test_agent.py  test_docparse.py  test_eval_grade.py
